# Corpus

./: .gitignore  STATUS.md
db/: schema.sql
pipeline/: .env.example  pyproject.toml
pipeline/corpus/: chunk.py  clean.py  cli.py  config.py  db.py  embed.py  extract.py  intake.py  metadata.py  paths.py  providers.py  reprocess.py
pipeline/tests/: test_chunk.py  test_clean.py  test_cli.py  test_extract.py  test_metadata.py  test_providers.py  test_reprocess.py
review-ui/: .env.local.example  next.config.ts  package-lock.json  package.json
review-ui/app/: actions.ts  globals.css  layout.tsx  page.tsx
review-ui/app/api/documents/: route.ts
review-ui/app/api/documents/[id]/reprocess/: route.ts
review-ui/app/api/documents/[id]/reset/: route.ts
review-ui/app/api/documents/upload/: route.ts
review-ui/app/documents/[id]/: page.tsx
review-ui/app/graph/: page.tsx
review-ui/components/: AutoRefresh.tsx  ConfirmSubmitButton.tsx  DocumentTable.tsx  GraphCanvas.tsx  GraphExplorer.tsx  GraphPreviewPanel.tsx  MetadataForm.tsx  PendingSubmitButton.tsx  ReprocessControls.tsx  Spinner.tsx  StageProgress.tsx  StatusBadge.tsx  UploadForm.tsx
review-ui/lib/: clustering.ts  flags.ts  pipeline.ts  supabase.ts  types.ts
supabase/: config.toml
supabase/migrations/: 20260718000000_initial_schema.sql  20260718160000_chunk_similarity_edges.sql  20260718170000_search_chunks.sql  20260719000000_cleaning_stage.sql
