[project]
name = "corpus"
version = "0.1.0"
description = "Manual ingestion pipeline: PDFs -> extract -> chunk -> embed -> Supabase"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "supabase>=2.4",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
corpus = "corpus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corpus"]
